--- a/source/_styles/reatlat_cub-admin.scss
+++ b/source/_styles/reatlat_cub-admin.scss
@@ -7,6 +7,14 @@
 
     @import "vendors/toggle-checkbox";
 
+    &.wrap--metabox {
+        display: inline-block;
+        margin: 0;
+        .reatlat_cub_tabs_container {
+            width: 100%;
+        }
+    }
+
     .clickable {
         cursor: pointer;
     }
@@ -237,6 +245,9 @@
                 }
             }
         }
+        td.user_id {
+            width: 110px;
+        }
         td.remove_link {
             position: relative;
             width: 20px;
@@ -361,7 +372,7 @@
             }
             &.changelog {
                 .changelog__container {
-                    max-height: 250px;
+                    max-height: 230px;
                     overflow: auto;
                 }
                 h4 {
