--- a/source/_styles/_vars.scss
+++ b/source/_styles/_vars.scss
@@ -15,4 +15,14 @@ $black:       #000000;
 
 $theme-color: #37A000;
 
+
+/**
+ + Sizes
+ */
+$sm: 568px;
+$md: 768px;
+$lg: 1024px;
+$xl: 1280px;
+
 $min-width: 961px;
+
