--- a/source/_styles/_radio-button.scss
+++ b/source/_styles/_radio-button.scss
@@ -4,14 +4,14 @@
   overflow: hidden;
   font-size: 16px;
   transform: scale(0.8);
-  transition: 0.5s;
+  transition: .3s;
+}
 
-  &.active {
-    opacity: 1;
-    max-height: 100px;
-    padding: 10px 20px;
-    transform: scale(1);
-    overflow: visible;
-  }
-
+input[type="radio"]:checked + .radio-if-active,
+input[type="radio"]:checked + label + .radio-if-active {
+  opacity: 1;
+  max-height: 100px;
+  padding: 10px 20px;
+  transform: scale(1);
+  overflow: visible;
 }
