add ajax callback to create link row

--- a/source/_styles/reatlat_cub-admin.scss
+++ b/source/_styles/reatlat_cub-admin.scss
@@ -233,6 +233,9 @@
             &.reatlat_cub_custom-params {
                 display: none;
             }
+            &.reatlat_cub_yellow-highlight {
+                background: #fffbae;
+            }
         }
         td.campaign_info {
             position: relative;
