improve style and scripts

--- a/source/_styles/reatlat_cub-admin.scss
+++ b/source/_styles/reatlat_cub-admin.scss
@@ -234,7 +234,10 @@
                 display: none;
             }
             &.reatlat_cub_yellow-highlight {
-                background: #fffbae;
+                background: #fbffce;
+                &:nth-child(odd) {
+                    background: #fffbae;
+                }
             }
         }
         td.campaign_info {
