--- a/source/_styles/reatlat_cub-admin.scss
+++ b/source/_styles/reatlat_cub-admin.scss
@@ -209,10 +209,24 @@
         }
         position: relative;
 
+        .reatlat_cub_result__table_pagination {
+            position: absolute;
+            top: 34px;
+            right: 1px;
+            button {
+                position: relative;
+                top: -2px;
+                cursor: pointer;
+                .dashicons {
+                    color: $default;
+                }
+            }
+        }
+
         .export_to_csv {
             cursor: pointer;
             position: absolute;
-            top: 30px;
+            top: 0px;
             right: 1px;
             line-height: 20px;
             user-select: none;
@@ -252,6 +266,7 @@
                 }
             }
         }
+        th.campaign_info,
         td.campaign_info {
             position: relative;
             width: 40px;
@@ -289,24 +304,29 @@
                 }
             }
         }
+        th.campaign_name,
         td.campaign_name {
             @media (min-width: $xl) {
                 width: 15%;
             }
         }
+        th.campaign_short_link,
         td.campaign_short_link {
             @media (min-width: $xl) {
                 width: 15%;
             }
         }
+        th.campaign_full_link,
         td.campaign_full_link {
             //width: 15%;
         }
+        th.campaign_user_id,
         td.campaign_user_id {
             @media (min-width: $xl) {
                 width: 110px;
             }
         }
+        th.campaign_remove_link,
         td.campaign_remove_link {
             position: relative;
             width: 20px;
