--- a/source/_styles/reatlat_cub-admin.scss
+++ b/source/_styles/reatlat_cub-admin.scss
@@ -144,15 +144,32 @@
             padding: 0;
             &.new-feature {
                 position: relative;
-                &:after {
-                    position: absolute;
-                    right: 5px;
-                    top: 2px;
-                    font-weight: bold;
-                    content: 'NEW';
-                    color: $theme-color;
-                    font-size: 10px;
-                    line-height: 1;
+                a {
+                    &:after {
+                        z-index: 10;
+                        position: absolute;
+                        right: 2px;
+                        top: 0px;
+                        font-weight: bold;
+                        content: 'NEW';
+                        color: white;
+                        padding: 2px 3px;
+                        background: lighten($theme-color, 3%);
+                        display: inline-block;
+                        font-size: 9px;
+                        line-height: 1;
+                    }
+                    &.active {
+                        &:after {
+                            background: transparent !important;
+                            color: $theme-color !important;
+                        }
+                    }
+                    &:hover {
+                        &:after {
+                            background: lighten($theme-color, 6%);
+                        }
+                    }
                 }
             }
             &:focus,
