--- a/source/_styles/reatlat_cub-admin.scss
+++ b/source/_styles/reatlat_cub-admin.scss
@@ -89,6 +89,9 @@
 
     .dashicons {
         color: $theme-color;
+        &.alert {
+            color: $red;
+        }
     }
 
     .reatlat_cub_form {
@@ -232,6 +235,14 @@
                     color: $theme-color;
                 }
             }
+        }
+
+        .reatlat_cub__shortcode-example {
+                font-family: monospace;
+                font-size: 12px;
+                background: rgba(black,.05);
+                padding: 15px;
+                cursor: text;
         }
     }
 
@@ -512,5 +523,19 @@
                 }
             }
         }
+    }
+
+    .button {
+        &.button-shortcode-generator {
+            .dashicons {
+                color: white;
+                margin: 3px 5px 0 0;
+            }
+        }
+    }
+
+    // colors
+    .alert {
+        color: $red;
     }
 }
