update sidebar layout

--- a/source/_styles/_vars.scss
+++ b/source/_styles/_vars.scss
@@ -1,9 +1,12 @@
 $red:         #ac4142;
 $orange:      #d28445;
 $yellow:      #f4bf75;
+$parchment:   #fffbae;
+$sunflower:   #ffdd00;
 $green:       #90a959;
 $cyan:        #75b5aa;
 $blue:        #6a9fb5;
+$deepsea:     #084c91;
 $magenta:     #aa759f;
 $brown:       #8f5536;
 $default:     #505050;
