rebrandly API done

--- a/source/assets/scss/reatlat_cub-admin.scss
+++ b/source/assets/scss/reatlat_cub-admin.scss
@@ -167,6 +167,7 @@
             padding-bottom: 0;
         }
 
+        div > label,
         tr > th > label {
             &.new-feature {
                 &:after {
