--- a/source/assets/scss/reatlat_cub-admin.scss
+++ b/source/assets/scss/reatlat_cub-admin.scss
@@ -566,6 +566,22 @@
                 text-decoration: none;
             }
 
+            &.ami-banner {
+                a {
+                    display: block;
+                    text-align: center;
+                    @include transit();
+                    img {
+                        display: block;
+                        width: 100%;
+                        height: auto;
+                    }
+
+                    &:hover {
+                        transform: scale(1.15);
+                    }
+                }
+            }
 
             &.buymeacoffee {
                 background: $sunflower;
